[package]
name = "test"
version = "0.0.0"
authors = ["Ryan Sproule <ryan@blockchain.capital>"]
edition = "2021"
publish = false

[dependencies]
fuels = { version = "0.31", features = ["fuel-core-lib"] }
tokio = { version = "1.24", features = ["rt", "macros"] }
sha2 = "0.10"

[[test]]
harness = true
name = "integration_tests"
path = "test_projects/harness.rs"

[workspace]